Fixnuty styl linkbaru, nech sa kvoli nemu nemusi zbytocne pouzivat horizontalny scrollbar Review URL: http://codereview.appspot.com/4000062
git-svn-id: https://fajr.googlecode.com/svn/trunk@742 e29e1642-1b52-11df-8da0-9131547f57cf

--- a/web/css/fajr/custom.css
+++ b/web/css/fajr/custom.css
@@ -60,7 +60,6 @@ button.tableButton
 
 div.linkbar {
   margin: 1ex;
-  width: 100%;
 }
 
 div.linkbarLeft {
@@ -69,7 +68,6 @@ div.linkbarLeft {
 
 div.linkbarRight {
   text-align: right;
-  margin-right: 2em;
 }
 
 div.infoFooter {
